# inventory-managoat

./: README.md  inv.1
cli/: Cargo.toml
cli/src/: main.rs
manager/: Cargo.toml
