[package]
name = "inv"
version = "0.3.0"
authors = ["Hauptling12"]
edition = "2018"
description = """
A Simple Command Line Inventory Manager.
"""
keywords = ["inventory", "manager", "inv"]
repository = "https://github.com/Hauptling12/invin-mr"
license = "Apache-2.0"
exclude = ["doc"]

[dependencies]
prettytable-rs = "0.8.0"
#inv_manager = { path = "../manager" }
inv_manager = "0.2.0"
dirs = "2.0.2"
humantime = "1.3.0"
serde_json = "1.0.44"
structopt = "0.3.7"

