[package]
name = "inv_manager"
version = "0.3.0"
authors = ["Hauptling12"]
edition = "2018"
description = """
Library for inventory_managoat (inv crate)
"""
repository = "https://github.com/Hauptling12/invin-mr"
license = "Apache-2.0"
exclude = ["doc"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
derive_builder = "0.9.0"
humantime = "1.3.0"

